--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <!-- Campos ocultos para controlar comportamiento -->
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://clous-nail-art.netlify.app/gracias.html">
+            <input type="hidden" name="_next" value="https://clous-nails-art.netlify.app/gracias.html">
 
 
             <button type="submit">¡Cotiza tu diseño!</button>
