--- a/gracias.html
+++ b/gracias.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>¡Gracias por tu pedido!</title>
   <style>
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #fff0f6;
@@ -20,7 +21,7 @@
     }
 
     .logo-container {
-     width: 243px; /* Ajusta al tamaño de tu círculo */
+    width: 243px; 
     height: 250px;
     margin-bottom: 60px;
     border-radius: 50%;
@@ -28,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white; /* O el color del círculo blanco */
+    background-color: white;
     }
 
     .logo-container img {
@@ -64,10 +65,9 @@
   </style>
 </head>
 <body>
-  <!-- <img src="img/logo.jpg" alt="Logo Clous Nails Art" class="logo"> -->
-   <div class="logo-container">
-                <img src="img/logo.jpg" alt="Logo Clous Room Nails Art">
-            </div>
+  <div class="logo-container">
+    <img src="img/logo.jpg" alt="Logo Clous Room Nails Art">
+  </div>
   <h1>💖 ¡Gracias por tu pedido!</h1>
   <p>Hemos recibido tu solicitud y nos pondremos en contacto contigo muy pronto.</p>
   <a href="index.html">Volver al inicio</a>
