--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <header>
     <div class="contenedor-header">
       <div class="logo-container">
-        <img class="img-logo" src="img/logo-Jo.png" alt="Logo Joana Mora">
+        <img class="img-logo" src="assets/img/logo-Jo.png" alt="Logo Joana Mora">
       </div>
       <div>
         <h1 class="titulo">Joana Mora</h1>
