--- a/gracias.html
+++ b/gracias.html
@@ -106,7 +106,7 @@ a:hover {
 </head>
 <body>
   <div class="logo-container">
-    <img src="img/logo-Jo.png" alt="Logo Joana Mora">
+    <img src="assets/img/logo-Jo.png" alt="Logo Joana Mora">
   </div>
 
   <h1>🔮 ¡Gracias por tu pedido!</h1>
