actualizacion index.html, main.js, galeria y estilos

--- a/index.html
+++ b/index.html
@@ -98,19 +98,32 @@
 
       <!-- ÚNICA galería -->
       <div id="galeria-todas" class="imagenes-galeria">
-        <!-- TODO: reemplaza por tus imágenes -->
-        <img src="img/natural1.jpg" alt="Diseño natural 1" onclick="abrirLightbox(this.src)">
-        <img src="img/natural2.jpg" alt="Diseño natural 2" onclick="abrirLightbox(this.src)">
-        <img src="img/vivo1.jpg"    alt="Colores vivos 1"   onclick="abrirLightbox(this.src)">
-        <img src="img/vivo2.jpg"    alt="Colores vivos 2"   onclick="abrirLightbox(this.src)">
-        <img src="img/esp1.jpg"     alt="Diseño especial 1" onclick="abrirLightbox(this.src)">
-        <img src="img/esp2.jpg"     alt="Diseño especial 2" onclick="abrirLightbox(this.src)">
+
+        <img src="assets/img/img1.jpg" alt="Diseño 1" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img2.jpg" alt="Diseño 2" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img3.jpg" alt="Diseño 3"   onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img4.jpg" alt="Diseño 4"   onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img5.jpg" alt="Diseño 5" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img6.jpg" alt="Diseño 6" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img7.jpg" alt="Diseño 7" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img8.jpg" alt="Diseño 8" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img9.jpg" alt="Diseño 9" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img10.jpg" alt="Diseño 10" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img11.jpg" alt="Diseño 11" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img12.jpg" alt="Diseño 12" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img13.jpg" alt="Diseño 13" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img14.jpg" alt="Diseño 14" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img15.jpg" alt="Diseño 15" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img16.jpg" alt="Diseño 16" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img17.jpg" alt="Diseño 17" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img18.jpg" alt="Diseño 18" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img19.jpg" alt="Diseño 19" onclick="abrirLightbox(this.src)">
       </div>
     </div>
   </div>
 
   <!-- Proceso + Form -->
-  <form action="https://formsubmit.co/danae.joamors@gmail.com" method="POST" enctype="multipart/form-data">
+  <form action="https://formsubmit.co/jomoranails@gmail.com" method="POST" enctype="multipart/form-data">
     <div class="container">
       <!-- Pasos -->
       <div class="pasos">
@@ -126,7 +139,8 @@
         <div id="modalGuia" class="modal">
           <div class="modal-contenido">
             <button class="cerrar" onclick="cerrarModal()" aria-label="Cerrar guía">&times;</button>
-            <img src="img/guia-medidas.jpg" alt="Guía de medición de uñas" class="imagen-modal">
+            <img src="assets/img/Instrucciones.jpg" alt="Guía de medición de uñas" class="imagen-modal">
+            <img src="assets/img/Instrucciones2.jpg" alt="Guía de medición de uñas 2" class="imagen-modal">
           </div>
         </div>
 
@@ -180,7 +194,7 @@
 
         <!-- FormSubmit config -->
         <input type="hidden" name="_captcha" value="false">
-        <!-- TODO: actualiza cuando cambies el nombre del sitio en Netlify -->
+        
         <input type="hidden" name="_next" value="https://joana-mora-nails.netlify.app/gracias.html">
 
         <button type="submit">🧾 ¡Cotiza tu diseño!</button>
