google-site-verification

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     "description":"Uñas personalizadas elegantes hechas a medida en Guadalajara."
   }
   </script>
+
+  <meta name="google-site-verification" content="fzte2G_gkicaCNa1sytZ_MW9z8vuVvxQWbkmB1zDsZo" />
 </head>
 <body>
   <!-- Header -->
