--- a/index.html
+++ b/index.html
@@ -5,48 +5,62 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
- <!-- SEO -->
-<title>Joana Mora · Uñas Personalizadas & Nail Art · Uñas Press On</title>
-<meta name="description" content="Uñas personalizadas elegantes hechas a tu medida. Diseños exclusivos de Joana Mora con entrega en Guadalajara.">
-<link rel="canonical" href="https://joana-mora-nails.netlify.app/">
-<link rel="manifest" href="manifest.webmanifest">
-<meta name="theme-color" content="#A78BFA">
+  <!-- SEO -->
+  <title>Joana Mora · Uñas Personalizadas & Nail Art · Uñas Press On</title>
+  <meta name="description" content="Uñas personalizadas elegantes hechas a tu medida. Diseños exclusivos de Joana Mora con entrega en Guadalajara.">
+  <link rel="canonical" href="https://joana-mora-nails.netlify.app/">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#A78BFA">
+  <meta name="robots" content="index, follow">
 
-<meta name="robots" content="index, follow">
+  <!-- Colores de navegador -->
+  <meta name="theme-color" content="#A985D6">
 
-<!-- Colores de navegador -->
-<meta name="theme-color" content="#A985D6">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Joana Mora">
+  <meta property="og:title" content="Joana Mora · Uñas Personalizadas & Nail Art">
+  <meta property="og:description" content="Uñas personalizadas elegantes hechas a tu medida. Diseños exclusivos con entrega en Guadalajara.">
+  <meta property="og:url" content="https://joana-mora-nails.netlify.app/">
+  <meta property="og:image" content="https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png">
+  <meta property="og:image:secure_url" content="https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="es_MX">
 
-<!-- Open Graph -->
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="Joana Mora">
-<meta property="og:title" content="Joana Mora · Uñas Personalizadas & Nail Art">
-<meta property="og:description" content="Uñas personalizadas elegantes hechas a tu medida. Diseños exclusivos con entrega en Guadalajara.">
-<meta property="og:url" content="https://joana-mora-nails.netlify.app/">
-<meta property="og:image" content="https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png">
-<meta property="og:image:secure_url" content="https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:locale" content="es_MX">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Joana Mora · Uñas Personalizadas & Nail Art">
+  <meta name="twitter:description" content="Diseños elegantes hechos a tu medida.">
+  <meta name="twitter:image" content="https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png">
 
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Joana Mora · Uñas Personalizadas & Nail Art">
-<meta name="twitter:description" content="Diseños elegantes hechos a tu medida.">
-<meta name="twitter:image" content="https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png">
-
-
-  <!-- Tipografías -->
+  <!-- Tipografías & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  <!-- Estilos -->
+  <!-- Estilos globales -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Favicon -->
-  <!-- TODO: sube tu favicon y ajusta la ruta -->
+  <!-- Ajustes suaves para las nuevas secciones -->
+  <style>
+    .home-cta-wrap{max-width:760px;margin:18px auto;padding:0 16px;display:grid;gap:14px}
+    .cta-card, .finder-card{
+      background:#fff;border:1px solid #f1e9ff;border-radius:14px;box-shadow:0 8px 22px #0001;padding:16px
+    }
+    .cta-button{
+      display:block;text-align:center;background:#a78bfa;color:#fff;padding:14px 18px;border-radius:12px;
+      font-weight:800;text-decoration:none
+    }
+    .finder-title{font-weight:800;margin-bottom:8px;color:#6b21a8}
+    .finder-row{display:flex;gap:8px;flex-wrap:wrap}
+    .finder-row input{flex:1;min-width:200px;padding:10px;border:1px solid #e5e7eb;border-radius:10px}
+    .finder-row button{padding:10px 14px;border:0;border-radius:10px;background:#a78bfa;color:#fff;font-weight:700}
+    .finder-status{margin-top:8px;color:#6b7280}
+  </style>
+
+  <!-- Favicon (cuando quieras) -->
   <!-- <link rel="icon" href="img/favicon.png" type="image/png"> -->
 
   <!-- Schema.org JSON-LD -->
@@ -58,7 +72,7 @@
     "url":"https://joana-mora-nails.netlify.app/",
     "logo":"https://joana-mora-nails.netlify.app/assets/og/joana-mora-og.png",
     "sameAs":[
-      "https://www.instagram.com/nailsjomora/", 
+      "https://www.instagram.com/nailsjomora/",
       "https://www.tiktok.com/@TU_USUARIO"
     ],
     "description":"Uñas personalizadas elegantes hechas a medida en Guadalajara."
@@ -79,39 +93,50 @@
         <h2 class="subtitulo">Nails Studio</h2>
       </div>
       <div class="header-buttons">
-        <a href="https://wa.me/5213344782571?text=Hola%20Joana,%20quiero%20agendar%20una%20cita%20💅" 
-   class="btn-cta" target="_blank" rel="noopener noreferrer">
-  Agenda tu cita
-</a>
-
+        <a href="https://wa.me/5213344782571?text=Hola%20Joana,%20quiero%20agendar%20una%20cita%20💅"
+           class="btn-cta" target="_blank" rel="noopener noreferrer">Agenda tu cita</a>
         <button class="btn-resenas" data-open="modalResenas">Experiencias de nuestras clientas</button>
       </div>
-    </div>    
+    </div>
   </header>
 
-  <!-- Modal aparte -->
-<div id="modalResenas" class="modal">
-  <div class="modal-content">
-    <h2>Experiencias de nuestras clientas</h2>
-    <p>“Un trabajo impecable, delicado y elegante.” – Mariana</p>
-    <p>“Me encantó la atención, mis uñas quedaron hermosas.” – Fernanda</p>
-    <p>“Definitivamente mi nuevo lugar favorito.” – Alejandra</p>
-    
-    <button class="btn-cerrar" data-close="modalResenas">Cerrar</button>
+  <!-- Modal Reseñas -->
+  <div id="modalResenas" class="modal">
+    <div class="modal-content">
+      <h2>Experiencias de nuestras clientas</h2>
+      <p>“Un trabajo impecable, delicado y elegante.” – Mariana</p>
+      <p>“Me encantó la atención, mis uñas quedaron hermosas.” – Fernanda</p>
+      <p>“Definitivamente mi nuevo lugar favorito.” – Alejandra</p>
+      <button class="btn-cerrar" data-close="modalResenas">Cerrar</button>
+    </div>
   </div>
-</div>
 
   <!-- Hero / Slogan -->
   <section>
     <h2 class="slogan"> ¡ Más que uñas, una experiencia !</h2>
     <div class="ritual-card">
-  <p>
-    Transformamos tu esencia en arte, un ritual de belleza que convierte cada uña en algo único.
-  </p>
-</div>
-
-
+      <p>Transformamos tu esencia en arte, un ritual de belleza que convierte cada uña en algo único.</p>
+    </div>
     <p class="elige">¡Elige, personaliza y luce!</p>
+  </section>
+
+  <!-- 🔥 CTA de Tarjeta + Finder -->
+  <section class="home-cta-wrap" aria-label="Tarjeta de sellos">
+    <!-- CTA obtener tarjeta -->
+    <div class="cta-card">
+      <a class="cta-button" href="registro.html">✨ Obtén tu tarjeta de Fidelidad</a>
+      <p style="margin:8px 0 0;color:#6b7280">Regístrate en segundos y recibe tu QR para acumular sellos en cada visita y obtener recompensas.</p>
+    </div>
+
+    <!-- Finder: ¿Ya tienes tarjeta? -->
+    <div class="finder-card">
+      <div class="finder-title">¿Ya tienes tarjeta?</div>
+      <div class="finder-row">
+        <input id="phone" placeholder="Tu teléfono (WhatsApp)">
+        <button id="find">Ver mi tarjeta</button>
+      </div>
+      <div id="findStatus" class="finder-status"></div>
+    </div>
   </section>
 
   <!-- Galería -->
@@ -126,16 +151,14 @@
   <div id="modalGaleria" class="modal" aria-hidden="true">
     <div class="modal-contenido-galeria" role="dialog" aria-modal="true" aria-labelledby="tituloGaleria">
       <button class="cerrar" id="btnCerrarGaleria" aria-label="Cerrar">&times;</button>
-
       <h3 id="tituloGaleria" class="sr-only">Galería</h3>
 
       <!-- ÚNICA galería -->
       <div id="galeria-todas" class="imagenes-galeria">
-
         <img src="assets/img/img1.jpg" alt="Diseño 1" onclick="abrirLightbox(this.src)">
         <img src="assets/img/img2.jpg" alt="Diseño 2" onclick="abrirLightbox(this.src)">
-        <img src="assets/img/img3.jpg" alt="Diseño 3"   onclick="abrirLightbox(this.src)">
-        <img src="assets/img/img4.jpg" alt="Diseño 4"   onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img3.jpg" alt="Diseño 3" onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img4.jpg" alt="Diseño 4" onclick="abrirLightbox(this.src)">
         <img src="assets/img/img5.jpg" alt="Diseño 5" onclick="abrirLightbox(this.src)">
         <img src="assets/img/img6.jpg" alt="Diseño 6" onclick="abrirLightbox(this.src)">
         <img src="assets/img/img7.jpg" alt="Diseño 7" onclick="abrirLightbox(this.src)">
@@ -230,7 +253,6 @@
 
         <!-- FormSubmit config -->
         <input type="hidden" name="_captcha" value="false">
-        
         <input type="hidden" name="_next" value="https://joana-mora-nails.netlify.app/gracias.html">
 
         <button type="submit">🧾 ¡Cotiza tu diseño!</button>
@@ -249,7 +271,7 @@
     <div class="footer-contenido">
       <h3>Joana Mora</h3>
       <p>Gracias por confiar en nuestro trabajo 🔮</p>
-        <small>© 2025 Joana Mora Nails Studio. Todos los derechos reservados.</small>
+      <small>© 2025 Joana Mora Nails Studio. Todos los derechos reservados.</small>
       <p class="credito">
         Página diseñada por 
         <a href="https://norrkode.netlify.app" target="_blank" rel="noopener noreferrer">Norr<span class="span">K</span>ode</a>
@@ -257,13 +279,118 @@
     </div>
   </footer>
 
-
-  <!-- JS -->
+  <!-- JS principal -->
   <script src="main.js"></script>
+
+  <!-- Finder de tarjeta (Supabase) -->
+  <script type="module">
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+    const SUPABASE_URL  = "https://ovqwsturtwluwvvaucmk.supabase.co";
+    const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92cXdzdHVydHdsdXd2dmF1Y21rIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5MDU2MjYsImV4cCI6MjA3NTQ4MTYyNn0.vtteeCxjL6inYWiIXwYU7tTjID237mGU4l9EOnqvydY";
+    const sb = createClient(SUPABASE_URL, SUPABASE_ANON);
+
+    const $ = id => document.getElementById(id);
+    const phoneEl = $('phone'), findBtn = $('find'), findStatus = $('findStatus');
+
+    if (findBtn) {
+      findBtn.onclick = async (e) => {
+        e.preventDefault();
+        const raw = phoneEl.value;
+        const phone = String(raw).replace(/\D+/g,'').slice(-15);
+        if(!phone){ findStatus.textContent = 'Escribe tu teléfono'; return; }
+
+        findStatus.textContent = 'Buscando…'; findBtn.disabled = true;
+        try{
+          const { data, error } = await sb.from('customers').select('id').eq('phone', phone).maybeSingle();
+          if (error || !data){ findStatus.textContent = 'No encontré tu tarjeta. Revisa el número.'; findBtn.disabled = false; return; }
+          location.href = `tarjeta.html?id=${data.id}`;
+        }catch(err){
+          findStatus.textContent = 'Error buscando tu tarjeta.'; 
+          findBtn.disabled = false;
+        }
+      };
+    }
+  </script>
+
+  <!-- SW -->
   <script>
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('/sw.js');
   </script>
 
+  <script>
+(function(){
+  const PIN = '1806';                 // 👈 tu PIN
+  const DAYS = 365;                    // duración del desbloqueo
+  const KEY = 'adminUnlockedUntil';
+
+  function untilMs(days){ return Date.now() + days*24*60*60*1000; }
+  function isUnlocked(){
+    const t = parseInt(localStorage.getItem(KEY)||'0',10);
+    return Date.now() < t;
+  }
+  function saveUnlock(){ localStorage.setItem(KEY, String(untilMs(DAYS))); }
+
+  // Crea FAB (botón flotante)
+  const btn = document.createElement('a');
+  btn.href = 'admin-scan.html';
+  btn.textContent = 'Admin';
+  btn.setAttribute('aria-label','Admin');
+  btn.style.cssText = `
+    position:fixed; right:16px; bottom:16px; z-index:9999;
+    display:none; align-items:center; justify-content:center;
+    background:#a78bfa; color:#fff; padding:12px 16px; border-radius:999px;
+    font-weight:800; text-decoration:none; box-shadow:0 10px 22px #0003;
+  `;
+  document.addEventListener('DOMContentLoaded', ()=> document.body.appendChild(btn));
+
+  function showFab(){ btn.style.display='flex'; }
+
+  function unlockFlow(){
+    const pin = (prompt('PIN de administración')||'').trim();
+    if(pin === PIN){
+      saveUnlock();
+      showFab();
+      alert('Admin activado en este dispositivo ✅');
+    } else {
+      alert('PIN inválido');
+    }
+  }
+
+  // Gesto secreto: dejar presionado el logo 1.2s
+  function setupLongPressUnlock(){
+    const logo = document.querySelector('.img-logo');
+    if(!logo) return;
+    let timer;
+    const start = ()=> { timer = setTimeout(unlockFlow, 1200); };
+    const clear = ()=> { clearTimeout(timer); };
+    logo.addEventListener('touchstart', start, {passive:true});
+    logo.addEventListener('touchend', clear, {passive:true});
+    logo.addEventListener('mousedown', start);
+    logo.addEventListener('mouseup', clear);
+  }
+
+  // Atajo: escribir "admin"
+  function setupKeyUnlock(){
+    let seq = '';
+    window.addEventListener('keydown', e=>{
+      seq = (seq + e.key).slice(-5);
+      if(seq.toLowerCase() === 'admin') unlockFlow();
+    });
+  }
+
+  // Hash para forzar botón: /#admin
+  if(location.hash === '#admin') showFab();
+
+  // Si ya está desbloqueado, mostrarnos de una
+  if(isUnlocked()) showFab();
+
+  // Si no, prepara gestos y atajo
+  if(!isUnlocked()){
+    setupLongPressUnlock();
+    setupKeyUnlock();
+  }
+})();
+</script>
 
 </body>
 </html>
