--- a/tarjeta.html
+++ b/tarjeta.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="es">
 <head>
@@ -8,40 +7,180 @@
   <meta name="theme-color" content="#A78BFA" />
   <link rel="manifest" href="manifest.webmanifest">
   <style>
-    body{background:#f7f7fb;font-family:system-ui,Segoe UI,Roboto,Arial}
-    .card{max-width:420px;margin:40px auto;padding:22px;background:#fff;border-radius:18px;box-shadow:0 12px 30px rgba(0,0,0,.08)}
+    :root{
+      --morado:#a78bfa;
+      --morado-osc:#6b21a8;
+      --borde:#f1e9ff;
+    }
+    body{
+      background:#f7f7fb;
+      font-family:system-ui,Segoe UI,Roboto,Arial
+    }
+    .card{
+      max-width:420px;margin:40px auto;padding:22px;
+      background:linear-gradient(180deg,#f7f2ff,#ffffff);
+      border-radius:18px;border:1px solid var(--borde);
+      box-shadow:0 12px 30px rgba(0,0,0,.08)
+    }
     h2{margin:0 0 6px}
     .meta{color:#6b7280;font-size:14px}
-    .stamps{font-size:28px;font-weight:800;margin:10px 0}
+    .stamps{font-size:28px;font-weight:800;margin:10px 0;color:#111}
     .qr{display:grid;place-items:center;margin-top:12px}
+
+    /* Recompensas */
+    .section-title{margin:18px 0 8px;font-size:1.05rem;color:var(--morado-osc)}
+    .rewards .reward{
+      background:#fff;border-radius:14px;padding:12px;margin:10px 0;
+      box-shadow:0 8px 22px #00000014;border:1px solid var(--borde)
+    }
+    .rewards .reward.done{
+      border-left:6px solid var(--morado);
+      background:linear-gradient(180deg,#faf5ff,#ffffff)
+    }
+    .reward-head{display:flex;align-items:center;gap:10px;margin-bottom:6px}
+    .reward-head strong{font-size:1rem}
+    .chip{
+      font-size:.85rem;font-weight:700;background:#ede9fe;color:var(--morado-osc);
+      padding:4px 10px;border-radius:999px
+    }
+    .reward-body{color:#334155;font-size:.95rem}
+    .bar{height:8px;background:#f1f5f9;border-radius:999px;overflow:hidden;margin-top:8px}
+    .bar span{
+      display:block;height:100%;
+      background:linear-gradient(90deg,#a78bfa,#f472b6);
+      border-radius:999px
+    }
   </style>
 </head>
 <body>
   <div class="card">
     <h2 id="nombre">Cargando…</h2>
-    <div class="meta">Clienta de Joana Mora Nails Studio </div>
+    <div class="meta">Clienta de Joana Mora Nails Studio</div>
+
     <div class="stamps"><span id="sellos">0</span> sellos</div>
+
+    <!-- Recompensas -->
+    <div id="rewards" class="rewards"></div>
+
     <div class="qr"><canvas id="qr"></canvas></div>
   </div>
+
+  <!-- Confetti -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <script type="module">
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
     import QRCode from "https://esm.sh/qrcode@1.5.3";
 
-    const SUPABASE_URL  = "https://ovqwsturtwluwvvaucmk.supabase.co";   
-    const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92cXdzdHVydHdsdXd2dmF1Y21rIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5MDU2MjYsImV4cCI6MjA3NTQ4MTYyNn0.vtteeCxjL6inYWiIXwYU7tTjID237mGU4l9EOnqvydY";              
+    const SUPABASE_URL  = "https://ovqwsturtwluwvvaucmk.supabase.co";
+    const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92cXdzdHVydHdsdXd2dmF1Y21rIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5MDU2MjYsImV4cCI6MjA3NTQ4MTYyNn0.vtteeCxjL6inYWiIXwYU7tTjID237mGU4l9EOnqvydY";
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
 
+    // Config de recompensas
+    const REWARDS = [
+      { need: 5,  prize: "10% de descuento" },
+      { need: 10, prize: "Pedicure Spa Gratis" }
+    ];
+
+    function renderRewards(stamps){
+      const wrap = document.getElementById('rewards');
+      const items = REWARDS.map(r => {
+        const left = Math.max(0, r.need - stamps);
+        const ok   = left === 0;
+        const pct  = Math.min(100, (stamps / r.need) * 100);
+
+        return `
+          <div class="reward ${ok ? 'done' : ''}">
+            <div class="reward-head">
+              <span class="chip">${r.need} sellos</span>
+              <strong>${r.prize}</strong>
+            </div>
+            <div class="reward-body">
+              ${ok ? '✅ ¡Conseguida!' : `Te faltan <b>${left}</b> sello${left!==1?'s':''}.`}
+              <div class="bar"><span style="width:${pct}%"></span></div>
+            </div>
+          </div>`;
+      }).join('');
+
+      wrap.innerHTML = `<h3 class="section-title">Recompensas</h3>${items}`;
+    }
+
+    // --- Confeti & celebración ---
+    function burstConfetti() {
+      const end = Date.now() + 600;
+      (function frame() {
+        confetti({
+          particleCount: 50,
+          spread: 60,
+          origin: { y: 0.6 },
+          colors: ['#a78bfa','#f472b6','#facc15','#34d399']
+        });
+        if (Date.now() < end) requestAnimationFrame(frame);
+      })();
+    }
+
+    // Evita festejar la misma meta en el mismo dispositivo
+    function maybeCelebrate(id, stamps) {
+      const hit = REWARDS.find(r => stamps === r.need);
+      if (!hit) return;
+      const key = `celebrated_${id}_${stamps}`;
+      if (localStorage.getItem(key)) return;
+      localStorage.setItem(key, '1');
+      burstConfetti();
+    }
+
+    // ===== Carga de datos =====
     const id = new URLSearchParams(location.search).get("id");
     if (!id) { document.body.innerHTML = "<p style='padding:24px'>Falta ?id=...</p>"; throw new Error("No id"); }
 
     const { data, error } = await supabase.from("customers").select("*").eq("id", id).single();
     if (error || !data) {
       document.body.innerHTML = "<p style='padding:24px'>No encontré a esta clienta.</p>";
-      console.error(error); 
+      console.error(error);
     } else {
       nombre.textContent = data.name;
-      sellos.textContent = data.stamps ?? 0;
+
+      // Soporte mock en local: ?mock=11
+      let stamps = data.stamps ?? 0;
+      const isLocal = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
+      const mock = parseInt(new URLSearchParams(location.search).get('mock'));
+      if (isLocal && !Number.isNaN(mock)) stamps = mock;
+
+      sellos.textContent = stamps;
+
+      // Render recompensas y celebrar
+      renderRewards(stamps);
+      // Fallback: si por caché no se pintó, lo forzamos
+      if (!document.getElementById('rewards').innerHTML.trim()) {
+        const wrap = document.getElementById('rewards');
+        const milestones = REWARDS;
+        let html = '<h3 class="section-title">Recompensas</h3>';
+        for (const m of milestones) {
+          const left = Math.max(0, m.need - stamps);
+          const ok   = left === 0;
+          const pct  = Math.min(100, (stamps / m.need) * 100);
+          html += `
+            <div class="reward ${ok ? 'done' : ''}">
+              <div class="reward-head">
+                <span class="chip">${m.need} sellos</span>
+                <strong>${m.prize}</strong>
+              </div>
+              <div class="reward-body">
+                ${ok ? '✅ ¡Conseguida!' : `Te faltan <b>${left}</b> sello${left!==1?'s':''}.`}
+                <div class="bar"><span style="width:${pct}%"></span></div>
+              </div>
+            </div>`;
+        }
+        wrap.innerHTML = html;
+      }
+
+      // Confeti cuando alcanzas justo 5 o 10
+      maybeCelebrate(id, stamps);
+
+      // Forzar confeti en pruebas: &celebra=1
+      const force = new URLSearchParams(location.search).get('celebra');
+      if (force === '1') burstConfetti();
+
       const cardUrl = `${location.origin}${location.pathname}?id=${id}`;
       QRCode.toCanvas(document.getElementById("qr"), cardUrl, { width: 220 });
     }
